--- a/tida.html
+++ b/tida.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Tida</title>
 </head>
-<body><h1>paragraphe</h1>
-    
+<body>
+    <h1>paragraphe</h1>
+    <h1>je vous salue</h1>
+        <h2>bonjour a tous</h2>
 </body>
 </html>
